--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 
 body {
     background-color: #C384FB;
-    text-align: center
+    text-align: center;
+    cursor: url(http://ani.cursors-4u.net/nature/nat-11/nat1043.ani), url(http://ani.cursors-4u.net/nature/nat-11/nat1038.png), progress !important;}
 }
 
 h1 {
