--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     background-color: #C384FB;
     text-align: center;
-    cursor: url(http://ani.cursors-4u.net/nature/nat-11/nat1043.ani), url(http://ani.cursors-4u.net/nature/nat-11/nat1038.png), progress !important;}
+    cursor: url(http://ani.cursors-4u.net/nature/nat-11/nat1043.ani), url(http://ani.cursors-4u.net/nature/nat-11/nat1038.png), progress !importants;}
 }
 
 h1 {
