--- a/style.css
+++ b/style.css
@@ -2,15 +2,7 @@
 body {
     background-color: #C384FB;
     text-align: center;
-    cursor: url(http://ani.cursors-4u.net/nature/nat-11/nat1043.ani), url(http://ani.cursors-4u.net/nature/nat-11/nat1038.png), progress !importants;}
-}
-
-h1 {
-    color: white;
-    font-family: "Arial Black";
-    font-size: 300%;
-    text-shadow: 0 0 10px #0000FF;
-    text-align: center;
+    cursor: url(http://ani.cursors-4u.net/nature/nat-11/nat1043.ani), url(http://ani.cursors-4u.net/nature/nat-11/nat1038.png), progress !important;}
 }
 p  {
     color: black;
@@ -23,10 +15,10 @@ img {
     margin: auto;
 }
 
-h2 {
+h1, h2 {
     color: white;
     font-family: "Arial Black";
     font: 175%;
-    text-shadow: 0 0 5px #0000FF;
+    text-shadow: 0 0 10px #0000FF;
     text-align: center;
 }
