--- a/style.css
+++ b/style.css
@@ -4,19 +4,46 @@ body {
     text-align: center;
     cursor: url(http://ani.cursors-4u.net/nature/nat-11/nat1043.ani), url(http://ani.cursors-4u.net/nature/nat-11/nat1038.png), progress !importants;}
 }
-
 h1 {
     color: white;
     font-family: "Arial Black";
     font-size: 300%;
     text-shadow: 0 0 10px #0000FF;
-    text-align: center;
 }
+
+ul1{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #f1f1f1;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a.active {
+    background-color: #dbb2ff
+    color: white
+}
+
+li a:hover:not(.active) {
+    background-color: #555;
+    color: white
+}
+
 p  {
     color: black;
     font-family: Arial;
     font-size: 100%;
-    text-align: center;
 }
 img {
     display: block;
@@ -28,5 +55,4 @@ h2 {
     font-family: "Arial Black";
     font: 175%;
     text-shadow: 0 0 5px #0000FF;
-    text-align: center;
 }
