--- a/style.css
+++ b/style.css
@@ -20,13 +20,14 @@ ul1{
 }
 
 li {
-    float: left;
+    float: center;
 }
 
 li a {
     display: block;
     color: #000;
     padding: 8px 16px;
+    text-align: center;
     text-decoration: none;
 }
 
@@ -36,7 +37,7 @@ li a.active {
 }
 
 li a:hover:not(.active) {
-    background-color: #555;
+    background-color: #cd96ff;
     color: white
 }
 
